2010-02-02  Sanel <karijes@users.sourceforge.net>

	* po/update-messages.sh:
	* po/messages.pot: created directory for translations with accompanying files

2010-01-19  Sanel <karijes@users.sourceforge.net>

	* new entry in new year!!!
	* src/DesktopFile.cpp: if localized keys are not found, fallback to
	generic ones

2009-12-18  Sanel <karijes@users.sourceforge.net>

	* edelib/Config.h:
	* src/Config.cpp: small refactoring

2009-12-16  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h: little change for netwm_window_is_manageable() doc

2009-12-10  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h:
	* src/Netwm.cpp: some API refactoring, added netwm_window_get_type()

2009-12-09  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h:
	* src/Netwm.cpp: attempt to put common wm code in one place

2009-12-03  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/scheme.c: dump {} tokens; fixed so [] tokens can be
	aliased with ()

2009-12-02  Sanel <karijes@users.sourceforge.net>

	* configure.in:
	* edelib/DateTime.h:
	* edelib/File.h:
	* edelib/TableBase.h:
	* src/DateTime.cpp:
	* src/DesktopFile.cpp:
	* src/EdbusMessage.cpp:
	* src/File.cpp:
	* src/IconChooser.cpp:
	* src/IconTheme.cpp:
	* src/MessageBox.cpp:
	* src/PtyProcess.cpp:
	* src/SevenSeg.cpp:
	* src/TableBase.cpp:
	* src/tinyscheme/scheme.c:
	* test/UnitTest.cpp: added -Wshadow flag to prevent variable shadowing;
	cleaned warnings

2009-12-01  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/gen-c-string.sh: accept parameter and construct variable
	name from parameter name

2009-11-25  Sanel <karijes@users.sourceforge.net>

	* examples/theme.cpp: s/Fl_Button.h/Fl_Button.H
	* examples/Jamfile: let theme.cpp use FLTK_CFLAGS
	* edelib/ForeignCallback.h: fixed example to match function changes

2009-11-24  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/theme.scm: fix a typo in comment; additionally clarify
	theme.style-get function
	* examples/theme.cpp: