@@ -6,6 +6,9 @@ target_dirs="edelib src"
 # search patterns
 patterns="*.h *.c *.cpp"
 
+# template file
+potfile="edelib.pot"
+
 XGETTEXT="xgettext"
 if [ "x$XGETTEXT" = "x" ]; then
 	exit 0
@@ -20,5 +23,5 @@ for i in $patterns; do
 	src="$src `find $target_dirs -name $i`"
 done
 
-$XGETTEXT -k'_' -k'N_' $src -o $base/messages.pot
+$XGETTEXT -k'_' -k'N_' $src -o $base/$potfile
 cd $base
