@@ -1,3 +1,8 @@
+2010-02-03  Sanel <karijes@users.sourceforge.net>
+
+	* po/update-messages.sh:
+	* po/edelib.pot: default template file should be named edelib.pot
+
 2010-02-02  Sanel <karijes@users.sourceforge.net>
 
 	* po/update-messages.sh:
